@@ -1,0 +1,142 @@
+object XxmAuthForm: TXxmAuthForm
+  Left = 341
+  Top = 129
+  BorderStyle = bsSingle
+  Caption = 'xxmLocal Authentication'
+  ClientHeight = 216
+  ClientWidth = 284
+  Color = clHighlight
+  Font.Charset = DEFAULT_CHARSET
+  Font.Color = clWindowText
+  Font.Height = -13
+  Font.Name = 'Verdana'
+  Font.Style = []
+  Icon.Data = {
+    0000010002002020100000000400E80200002600000010101000000004002801
+    00000E0300002800000020000000400000000100040000000000000200000000
+    0000000000001000000010000000000000000000800000800000008080008000
+    0000800080008080000080808000C0C0C0000000FF0000FF000000FFFF00FF00
+    0000FF00FF00FFFF0000FFFFFF00000000000000000000000000000000000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0777777777777777777777777000000000000000000000000000000070000000
+    0111111111111111111111107000000001111BB1BBB1BBBB1BB1BB1070000000
+    011111BBB1BBB1BB1BB1BB10700000000111111B111B11BB1BB1BB1070000000
+    011111BBB1BBB1BB1BB1BB107000000001111BB1BBB1BBBBBBBBB11070000000
+    0111111111111111111111107000000001111111111111111111111070000000
+    011111111111111111111110700000000CCCCCCCCCCCCCCCCCCCCCC070000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0000000000000000000000000000000000000000000000000000000000000000
+    0000000000000000000000000000FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+    FFFFF8000007F0000007F0000007F0000007F0000007F0000007F0000007F000
+    0007F0000007F0000007F0000007F0000007F000000FFFFFFFFFFFFFFFFFFFFF
+    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+    FFFFFFFFFFFFFFFFFFFFFFFFFFFF280000001000000020000000010004000000
+    0000800000000000000000000000100000001000000000000000000080000080
+    000000808000800000008000800080800000C0C0C000808080000000FF0000FF
+    000000FFFF00FF000000FF00FF00FFFF0000FFFFFF0000000000000000000000
+    0000000000000088888888888888000000000000000800111111111111080011
+    11BBBBBBB1080011111B1B1BB108001111BBBBBBB10800111111111111080011
+    11111111110800CCCCCCCCCCCC08000000000000000000000000000000000000
+    00000000000000000000000000000000000000000000FFFF0000FFFF0000C000
+    0000800000008000000080000000800000008000000080000000800000008000
+    000080010000FFFF0000FFFF0000FFFF0000FFFF0000}
+  OldCreateOrder = False
+  Position = poScreenCenter
+  PixelsPerInch = 96
+  TextHeight = 16
+  object lblURL: TLabel
+    Left = 8
+    Top = 8
+    Width = 265
+    Height = 16
+    AutoSize = False
+    Caption = 'URL'
+    FocusControl = txtURL
+  end
+  object lblRealm: TLabel
+    Left = 8
+    Top = 48
+    Width = 265
+    Height = 16
+    AutoSize = False
+    Caption = 'Authentication Realm'
+    FocusControl = txtRealm
+  end
+  object lblUserName: TLabel
+    Left = 8
+    Top = 88
+    Width = 265
+    Height = 16
+    AutoSize = False
+    Caption = '&User Name'
+    FocusControl = txtUserName
+  end
+  object lblPassword: TLabel
+    Left = 8
+    Top = 128
+    Width = 265
+    Height = 16
+    AutoSize = False
+    Caption = '&Password'
+    FocusControl = txtPassword
+  end
+  object txtURL: TEdit
+    Left = 8
+    Top = 24
+    Width = 265
+    Height = 24
+    Color = clBtnFace
+    ReadOnly = True
+    TabOrder = 4
+  end
+  object txtRealm: TEdit
+    Left = 8
+    Top = 64
+    Width = 265
+    Height = 24
+    Color = clBtnFace
+    ReadOnly = True
+    TabOrder = 5
+  end
+  object txtUserName: TEdit
+    Left = 8
+    Top = 104
+    Width = 265
+    Height = 24
+    TabOrder = 0
+  end
+  object txtPassword: TEdit
+    Left = 8
+    Top = 144
+    Width = 265
+    Height = 24
+    PasswordChar = #8226
+    TabOrder = 1
+  end
+  object btnOK: TButton
+    Left = 56
+    Top = 176
+    Width = 105
+    Height = 25
+    Caption = 'OK'
+    Default = True
+    ModalResult = 1
+    TabOrder = 2
+  end
+  object btnCancel: TButton
+    Left = 168
+    Top = 176
+    Width = 105
+    Height = 25
+    Cancel = True
+    Caption = 'Cancel'
+    ModalResult = 2
+    TabOrder = 3
+  end
+end
