@@ -110,8 +110,8 @@ IncludeVerInfo=1
 AutoIncBuild=0
 MajorVer=1
 MinorVer=2
-Release=1
-Build=337
+Release=2
+Build=350
 Debug=0
 PreRelease=0
 Special=0
@@ -122,7 +122,7 @@ CodePage=1252
 [Version Info Keys]
 CompanyName=
 FileDescription=xxm Local Handler
-FileVersion=1.2.1.337
+FileVersion=1.2.2.350
 InternalName=xxmLocal
 LegalCopyright=
 LegalTrademarks=
